# gpu_info

./: .gitignore  .metadata  LICENSE  README.md  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: gpu_info.dart  gpu_info_bindings_generated.dart
lib/src/: gpu_info.dart  gpu_info_dart_base.dart  gpu_info_method_channel.dart  gpu_info_platform_interface.dart
src/: CMakeLists.txt  gpu_info.c
test/: gpu_info_method_channel_test.dart  gpu_info_test.dart
windows/: CMakeLists.txt  gpu_info.h  gpu_info.hpp  gpu_info_plugin.cpp  gpu_info_plugin.h  gpu_info_plugin_c_api.cpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_instance.cpp  vulkan_instance.hpp
windows/include/gpu_info/: gpu_info_plugin_c_api.h
windows/test/: gpu_info_plugin_test.cpp
